--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
 	"prefer-arrow-callback": [0],
     "react/no-danger": [0],
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn"
+    "react-hooks/exhaustive-deps": "warn",
+    "import/no-extraneous-dependencies": "off"
   }
 }
